Add Conjectures and analysis paragraph, switch definitions and problem.

--- a/CoolPoster Edit/CoolPoster.tex
+++ b/CoolPoster Edit/CoolPoster.tex
@@ -23,8 +23,8 @@
 %------------------------------------------------------------------------------------------
 \newSingle{Opening}{                             % This creates a single column with
            \BlockIntroduction      \vskip2ex     % A block   on the top
+           \BlockDefinitions       \vskip2ex
            \AlertMainProblem       \vskip2ex     % An Alert  underneath
-           \BlockDefinitions       \vskip2ex     % A block   underneath
            }
 %------------------------------------------------------------------------------------------
 \newSingle{Description}{                             % This creates a single column with
